--- a/styles.css
+++ b/styles.css
@@ -286,6 +286,7 @@ button:hover {
     position: fixed;
     z-index: 1000;
     left: 0;
+    display: none; /* Initially hide dropdown menu */
     top: 0;
     width: 100%;
     height: 100%;
