--- a/styles.css
+++ b/styles.css
@@ -64,37 +64,6 @@ nav {
     border-radius: 5px;
 }
 
-/* Dropdown Menu Styles */
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-    border-radius: 5px;
-    overflow: hidden;
-    transition: max-height 0.3s ease-out;
-    max-height: 0;
-}
-
-.dropdown-content a {
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    transition: background-color 0.3s, color 0.3s;
-}
-
-.dropdown-content a:hover {
-    background-color: #ddd;
-    color: #000dff;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
 /* Mobile Menu Styles */
 .menu-toggle {
     display: none;
@@ -116,27 +85,39 @@ nav {
     align-items: center;
     position: absolute;
     top: 60px;
-    left: 10px;
+    left: 0;
     background: #000dff;
     border-radius: 5px;
-    width: 200px;
+    width: 100%;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    overflow: hidden;
+    transition: max-height 0.3s ease-out;
+    max-height: 0;
+}
+
+.dropdown.active {
+    display: flex; /* Show dropdown when active */
+    max-height: 500px; /* Adjust max-height as needed */
 }
 
 .dropdown a {
-    padding: 10px;
+    padding: 15px;
     border-top: 1px solid #fff;
     width: 100%;
     text-align: center;
+    color: #fff;
+    text-decoration: none;
+    background-color: #000dff;
+    transition: background-color 0.3s, color 0.3s;
 }
 
 .dropdown a:first-child {
     border-top: none;
 }
 
-.dropdown.active {
-    display: flex; /* Show dropdown when active */
-    max-height: 500px; /* Adjust max-height as needed */
+.dropdown a:hover {
+    background-color: #fff;
+    color: #000dff;
 }
 
 @media (max-width: 768px) {
@@ -282,41 +263,4 @@ button:hover {
 
 /* Modal Styles */
 .modal {
-    display: none;
-    position: fixed;
-    z-index: 1000;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    overflow: auto;
-    background-color: rgba(0, 0, 0, 0.5);
-}
-
-.modal.show {
-    display: block;
-}
-
-.modal-content {
-    background-color: #fff;
-    margin: 15% auto;
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%;
-    border-radius: 10px;
-}
-
-.close {
-    color: #aaa;
-    float: right;
-    font-size: 28px;
-    font-weight: bold;
-    cursor: pointer;
-}
-
-.close:hover,
-.close:focus {
-    color: #000;
-    text-decoration: none;
-    cursor: pointer;
-}
+    display: none
