--- a/styles.css
+++ b/styles.css
@@ -83,9 +83,6 @@ nav {
     display: none; /* Initially hide dropdown */
     flex-direction: column;
     align-items: center;
-    position: absolute;
-    top: 60px;
-    left: 0;
     background: #000dff;
     border-radius: 5px;
     width: 100%;
@@ -127,32 +124,6 @@ nav {
 
     .menu-toggle {
         display: block; /* Show menu toggle button on mobile */
-    }
-
-    .dropdown {
-        display: flex; /* Show dropdown on mobile */
-        flex-direction: column;
-        align-items: center;
-        position: static; /* Ensure proper positioning on mobile */
-        background: #000dff;
-        border-radius: 5px;
-        width: 100%;
-        box-shadow: none;
-    }
-
-    .dropdown a {
-        padding: 15px;
-        border-top: 1px solid #fff;
-        width: 100%;
-        text-align: center;
-    }
-
-    .dropdown a:first-child {
-        border-top: none;
-    }
-
-    .dropdown-content {
-        width: 100%; /* Ensure full width on mobile */
     }
 }
 
@@ -263,4 +234,41 @@ button:hover {
 
 /* Modal Styles */
 .modal {
-    display: none
+    display: none;
+    position: fixed;
+    z-index: 1000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+.modal.show {
+    display: block;
+}
+
+.modal-content {
+    background-color: #fff;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    border-radius: 10px;
+}
+
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
